# Emotiv-Streamer

./: .gitignore  README_Flask.md  README_NextJS_Setup.md  app.py  start_flask.py  test_flask.py
python-emotiv/: .gitignore  Emotiv_Systems_Inc.-EPOC_BCI-07-15-2025_12-29-44.mat  Emotiv_Systems_Inc.-EPOC_BCI-07-15-2025_12-29-44_eeg_summary.txt  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-21-58.json  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-21-58.npz  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-29-36.json  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-36-58.json  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-36-58.npz  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-45-44.json  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-45-45.json  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-45-45.npz  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-58-39.json  Emotiv_Systems_Inc.-EPOC_BCI_filtered-08-03-2025_14-58-40.json  README.md  README_EEG_Recording.md  README_mat_reader.md  eeg_analysis_tools.py  eeg_data_analyzer.py  emotiv-07-08-2025_18-31-33.mat  emotiv-07-08-2025_18-31-33_eeg_summary.txt  emotiv-08-07-2025_17-37-01.mat  emotiv-08-07-2025_17-37-29.mat  example_usage.py  filter_data.py  pyproject.toml  quick_eeg_check.py  read_mat_file.py  record_eeg_data.py  record_eeg_with_live_filter.py  requirements.txt  setup.py  simple_mat_reader.py  structured_mat_reader.py  test_device_detection.py  test_headset.py  visualise_eeg_data.py  visualize_eeg.py
python-emotiv/data/: plot_burg.py
python-emotiv/emotiv/: analysis.py  epoc.py  utils.py
python-emotiv/examples/: bbb-bci-acquire.py  bbb-bci-dspd.py  bbb-bci-ssvepd.py  record-data.py  rpi-bci-ssvep.py  thesis-bci.py  yes-no-bci.py
python-emotiv/lsl/: lsl-pyemotiv.py  pylsl.py
python-emotiv/test/: packet_drop.py
python-emotiv/utils/: epoc-replug.py  pisarenko.py  ssvep-frequencies-diff.py  ssvep-frequencies.py
(+9 files in other folders)
