[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-emotiv"
version = "0.1"
description = "Python library to access Emotiv EPOC EEG headset data"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
authors = [
    {name = "Ozan Çağlayan", email = "ozancag@gmail.com"}
]
maintainers = [
    {name = "Ozan Çağlayan", email = "ozancag@gmail.com"}
]
keywords = ["eeg", "emotiv", "epoc", "bci", "brain-computer-interface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "pyusb>=1.0.0",
    "pycrypto>=2.6.0",
    "matplotlib>=3.0.0",
    "nitime>=0.7.0",
]

[project.urls]
Homepage = "http://github.com/ozancaglayan/python-emotiv"
Repository = "http://github.com/ozancaglayan/python-emotiv"
"Bug Tracker" = "http://github.com/ozancaglayan/python-emotiv/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]
docs = [
    "sphinx>=3.0",
    "sphinx-rtd-theme>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["emotiv*"] 